Implemented EndpointsAgent